# yandex-podcast-downloader-vkbot

./: .env.example  .gitignore  8.2.0  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  IMPROVEMENTS.md  LICENSE  QWEN.md  README.md  pyproject.toml  requirements.txt  test_improvements.py  test_kb_format.py  test_vkbottle_kb.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.qwen/: settings.json  settings.json.orig
scripts/: get_yandex_token.py
src/: config.py  main.py
src/bot/: handlers.py  keyboard.py
src/yandex/: client.py  player.py
src/yandex_music/: client.py  player.py
